# AEDS-I

./: README.md
Lista-2/Exercicio10/: maiorRecursiva.c
Lista-2/Exercicio11/: tamanhoString.c
Listas/Lista_encadeada/: Lista_encadeada.c
Listas/Problems/: FreeList.c  README.md  compare.c  concatenates.c  delete_nth_element.c  divides.c  insert_in_order.c  inverts_list.c  print_nth_element.c  recursive_print_list.c  recursive_search_by_name.c
Listas/TAD_DoublyLinkedList/: Lista.h  main.c
Listas/TAD_LinkedList/: Lista.c  Lista.h  interface.c  main.c
Listas/TAD_ListaDupla/: Lista.c  interface.c
Pointers/: stringh_functions.c
Queue/TAD_Queue/: interface.c  interface.h  main.c  queue.c  queue.h
Recursion_problems/Exercicio09/: SomaRecursiva.c
Recursion_problems/Exercicio10/: maiorRecursiva.c
Recursion_problems/Exercicio11/: tamanhoString.c
Recursion_problems/Exercicio12/: Invert.c
Recursion_problems/Exercicio13/: findsSub.c
Recursion_problems/Exercicio14/: findsPos.c
Recursion_problems/Exercicio15a/: mdc.c
Sorting_algorithms/codes/: algoritmos_ordenacao.c  jetbrains-account-recovery-codes.txt
Stacks/Stack/: stack.c
Stacks/TAD-Stack/: CMakeLists.txt  Pilha.c  Pilha.h  interface.c  interface.h  main.c  queue.c  queue.h  util.c  util.h
TicTacToe/: Board.c  Board.h  CMakeLists.txt  Computer.c  Computer.h  Game.c  Game.h  Ui.c  Ui.h  Util.c  Util.h  main.c
Trees/Problems/: Ex6_caminhamentos.c
Trees/TAD-tree/: interface.c  interface.h  main.c  tree.c  tree.h  util.c  util.h
Trees/TAD-tree/src/: Pilha.c  (+3 more)
Trees/tree/: arvores-aula-pratica.c
(+4 files in other folders)
